resolvendo problema de scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,11 @@
   
   /*HEADER*/
   header {
+    width: 100%;
     height: 519px;
     background-image: url("../assets/header-bg.png");
+    background-size: contain;
+    background-position: center;
   }
   
   .header-position {
@@ -20,6 +23,7 @@
   }
   
   /*MAIN*/
+
   h1 {
     font-size: 32px;
     font-weight: 700;
@@ -58,9 +62,9 @@
   /*CARD LIST*/
   #cardList {
     height: 600px;
-    width: 60vw;
+    width: 50vw;
     margin: 60px auto;
-    overflow: auto;
+    overflow-y: auto;
     gap: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -84,19 +88,6 @@
     border: 4px solid transparent;
   }
 
-  .flip{
-    transform: rotateY(180deg);
-  }
-
-  .face{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-  }
-
   .titleCard{
     background-color: var(--color-primary);
     height: 46px;
@@ -109,31 +100,59 @@
     padding: 10px;
   }
 
+ 
+  .face{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+  }
+
   .front,.back{
     border-radius: 5px;
     flex-direction: column;
     background-image: url("../assets/card-bg.png");
     backface-visibility: hidden;
   }
-  
+
+  .front{
+    transform: rotateY(180deg);
+  }
+
+  .cardData > li,
+  .cardData > ul,
+  .cardData > ul > li{
+    width: 160px;
+    color: var(--color-primary);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    text-align: left;
+  }
+
+
   /* FOOTER */
   
   footer {
     height: 186px;
     background-image: url("../assets/footer-bg.png");
+    background-position: center;
+    background-size: contain;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto;
+    margin: 0 auto;
   }
   
   .footer-position {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: auto;
+    margin: 0 auto;
     justify-content: center;
-    gap: 25px;
+    gap: 20px;
   }
   
   /* MOBILE */
